A couple of changes: - Used classes instead of inline styles to avoid having to use fully-qualified path for sub.gif allowing it to be loaded from a directory relative to the stylesheet. - Also used a class to reduce the width of the "a" tag so that non-white menus can be used with sub.gif otherwise sub.gif is hidden by the "a" tag. THIS VERSION HAS ISSUES: - "flashing" on Windows version of FF1.5 and probably others - this is due to inheriting the styles from andreas08. - poor graceful degradation if no script again - due to inheriting the styles from andreas08. It currently "works" but I am currently amending.

--- a/meshcms3/samples/meshcms/themes/andreas08-alib/alib.css
+++ b/meshcms3/samples/meshcms/themes/andreas08-alib/alib.css
@@ -38,14 +38,15 @@
 /*	top: 1.4em;*/
 	top: 2.2em;									/* For andreas08 */
 	left: -1px;							/* due to box model */
+/*Commented-out: inherit from andreas08
 	padding: 0px;
 	margin: 0px;
-	list-style: none;
+	list-style: none;*/
 	display: none;
 }
 
 .hmenuALIB ul ul {							/* n-level menu */
-	left: 150px;
+	left: 170px;
 	top: -1px;							/* */
 }
 
@@ -68,6 +69,7 @@
 	border-top: 0px solid black;
 /*Commented-out: inherit from andreas08
 	background-color: white;*/
+	width: 170px;
 }
 
 
@@ -94,7 +96,15 @@
 
 .hmenuALIB ul li a {						/* 1 or n-level menu anchors */
 	display: block;						/* all same width */
-	width: 150px;
+/*	width: 150px;*/
 /*	line-height: normal;*/
 	line-height: 2.4em;				/* For andreas08 */
+}
+
+.hmenuALIBsuba {
+	width: 140px;
+}
+
+.hmenuALIBsubli {
+background: #ffffff url(images/sub.gif) no-repeat 99%;
 }
