--- a/meshcms3/samples/meshcms/themes/andreas08-alib/main.css
+++ b/meshcms3/samples/meshcms/themes/andreas08-alib/main.css
@@ -105,6 +105,7 @@ color:#ffffff;
 list-style-type:none;
 border-right:1px solid #ffffff;
 white-space:nowrap;
+background-color:#578bb8;
 }
 
 #navigation li a{
@@ -114,7 +115,7 @@ font-size:0.8em;
 font-weight:normal;
 text-transform:uppercase;
 text-decoration:none;
-background-color:inherit;
+background-color:#578bb8;
 color: #ffffff;
 }
 
@@ -122,7 +123,7 @@ color: #ffffff;
 background-color:#578bb8;
 }
 
-/** html #navigation a {width:1%;}*/
+/** html #navigation a {width:1%;} */
 
 #navigation .selected,#navigation a:hover{
 background:#80b0da;
